# dotdotdot

./: .env.example  .gitignore  Makefile  README.md  TROUBLESHOOT.md  compose-postgres.yaml  pyproject.toml
notebooks/: 000-upload-data-to-hf.ipynb  001-eda.ipynb  001-simulate-oltp.ipynb  data_quality_report.html
src/config/: dataset_config.py
src/utils/: data_prep.py
